# fhe_dsl

./: Cargo.toml  README.md
backend/: Cargo.toml
backend/src/: error.rs  lib.rs  mock_fhe.rs  plain.rs  validation.rs
common/: Cargo.toml
common/src/: lib.rs
dsl/: Cargo.toml
dsl/src/: add.rs  compilation_mode.rs  compile.rs  ctx.rs  expr.rs  folding.rs  hash.rs  lib.rs  mul.rs  op.rs  sub.rs
ir/: Cargo.toml
ir/src/: circuit.rs  gate.rs  hash.rs  lib.rs
op/: Cargo.toml
op/src/: lib.rs
passes/: Cargo.toml
passes/src/: analysis.rs  depth.rs  folding.rs  interner.rs  lib.rs  liveness.rs  reassociate.rs  rebalance.rs
