[package]
name = "dsl"
version = "0.1.0"
edition = "2024"

[features]
graphview = []

[dependencies]
ir = {path = "../ir"}
op = {path = "../op"}
passes = {path = "../passes"}

bit-set.workspace = true
enum-iterator.workspace = true
fxhash.workspace = true
la-arena.workspace= true
thin-vec.workspace = true

[dev-dependencies]
parameterized_test = "0.2.1"
