[package]
name = "passes"
version = "0.1.0"
edition = "2024"

[dependencies]
common = {path = "../common"}
op = {path = "../op"}
ir = {path = "../ir"}

bit-set.workspace=true
fxhash.workspace=true
la-arena.workspace=true
prio-queue.workspace=true
thin-vec.workspace=true

[dev-dependencies]
parameterized_test = "0.2.1"
